typos and rephrasing

--- a/01-big-shiny.Rmd
+++ b/01-big-shiny.Rmd
@@ -4,9 +4,6 @@
 
 # About Successful Shiny Apps {#successfulshinyapp}
 
-> I Too Like to Live Dangerously. 
-> `r tufte::quote_footer('--- Austin Power')`
-
 ## A (very) short introduction to `{shiny}` 
 
 If you are reading this page, chances are you already know what a `{shiny}` application (shorten "Shiny app") is—__a web application that communicates with R, built in R, and working with R__. 
@@ -15,7 +12,7 @@ With small and minimal `{shiny}` apps, no knowledge of HTML, CSS or JavaScript i
 ^[Of course you can specify one if you need to, but by default the package picks one;]
 .
 Same goes for serving external dependencies: the application comes with its set of CSS and JavaScript dependencies that a common `{shiny}` developer does not need to worry about. 
-And that is probably one of the main reason why this package has become so successful over the years—with very little training, you can rapidly create a proof-of-concept (PoC) for a data-product, showcase an algorithm, or present your results in an elegant and accessible user interface. 
+And that is probably one of the main reason why this package has become so successful over the years—with very little training, you can rapidly create a proof-of-concept (PoC) for a data-product, showcase an algorithm, or present your results in an elegant and accessible user interfaces. 
 
 The first version of `{shiny}` was published in 2012. 
 Since then, it has been one of the top project of the RStudio team. 
@@ -96,7 +93,7 @@ But this can make the interface a little bit more complex for the users, who hav
 We will argue in this book that not enough reactivity is better than too much reactivity, as the latter increases computation time, and relies on the assumption that the user makes the right action on the first try.
 
 Another good example is `{shiny}`'s `dateRangeInput()` function.
-This function requires the user to choose a starting date and an ending date.
+This function requires the user to choose a start date and an end date.
 However, the function allows to choose a start date which is posterior to the end (that is the behavior of the JavaScript plugin used in `{shiny}` to create this input).
 But allowing this behavior leads to bugs, notably in a context of full reactivity. 
 Handling this special case is completely doable: with a little bit of craft, you can watch what the user inputs and throw an error if the start is after the end
@@ -429,10 +426,14 @@ frame_metric <- function(pkg){
   # Get the metrics
   metrics <- package_metrics(pkg)
   # Create the table
-  tibble::tibble(
-    n = names(metrics), 
-    val = metrics, 
-    expl = list_package_metrics()[names(metrics)]
+  cat(
+    names(metrics), 
+    ":", 
+    metrics, 
+    "(", 
+    list_package_metrics()[names(metrics)], 
+    ")", 
+    "\n"
   )
 }
 ```
