--- a/03-structure.Rmd
+++ b/03-structure.Rmd
@@ -7,16 +7,16 @@ library(shiny)
 ```
 
 In the next chapter you will be introduced to the `{golem}` [@R-golem] package, __an opinionated framework for building production-ready `{shiny}` Applications__. 
-This framework will be used a lot through this book, and it relies on the idea that every `{shiny}` application should be built as an R package.
+This framework will be used a lot throughout this book, and it relies on the idea that every `{shiny}` application should be built as an R package.
 
 But in a world where `{shiny}` applications are mostly created as a series of files, why bother with a package? 
 
 ### What is in a production-grade `{shiny}` App? 
 
-You probably haven't realized it yet, but if you have built a significant (in term of code base) `{shiny}` application, chances are you have been using a package-like structure without knowing it. 
+You probably haven't realized it yet, but if you have built a significant (in terms of size or complexity of the code base) `{shiny}` application, chances are you have been using a package-like structure without knowing it. 
 
-Think about your last `{shiny}` application which was created as a single-file (`app.R`) or two files app (`ui.R` and `server.R`). 
-On top of these files, what so you needed to make it __a production-ready application__, and why is a package the perfect infrastructure?
+Think about your last `{shiny}` application which was created as a single-file (`app.R`) or two-files app (`ui.R` and `server.R`). 
+On top of these files, what do you needed to make it __a production-ready application__, and why is a package the perfect infrastructure?
 
 #### A. It has metadata {-}
 
@@ -260,14 +260,14 @@ If you develop R packages, chances are you have split your functions into series
 
 ### When to use `{shiny}` modules
 
-No matter how big your application is, it is always a safe to start modularizing from the very beginning. The sooner you use modules, the easier downstream development will be.
+No matter how big your application is, it is always safe to start modularizing from the very beginning. The sooner you use modules, the easier downstream development will be.
 It is even easier if you are working with `{golem}`, which promotes the use of modules from the very beginning of your application. 
 
 "_Yes, but I just want to write a small app, nothing fancy_"
 
-Production apps almost always started as a small Proof of Concept. 
+A production apps almost always started as a small Proof of Concept. 
 Then, the small PoC becomes an interesting idea. 
-Then, this idea becomes a strategical asset. 
+Then, this idea becomes a strategic asset. 
 And before you know it, your 'not-that-fancy' app needs to become larger and larger.
 So, you will be better off starting on solid foundations from the very beginning.
 
@@ -706,9 +706,16 @@ For example:
 #### C. The "stratégie du grand R6" {-}
 
 Similarly to the "stratégie du petit r", we can create an R6 object, which is passed along inside the modules. 
+
+R6 objects, created using the package of the same name, are "traditionnal" object-oriented programming implementation in R. 
+And R6 object is a data structure that can hold in itself data and functions. 
+Its particularity being that if it's modified inside a function, this modified value is kept outside of the function it's called in, making it a powerful tool to manage data across the application.
+
 As this R6 object is not a reactive object and is not meant to be used as such, this reduces uncontrolled reactivity of the application, thus reduces the complexity of handling chain reactions across modules.
 Of course, you need to have another special tool in your app to trigger elements. 
-All this will be explained in details in chapter [Reactivity anti-patterns](#optim-caveat) of this book, and you can find an example of this pattern inside the [`{hexmake}`](https://github.com/ColinFay/hexmake/blob/master/R/R6.R) [@R-hexmake] application.
+All this will be explained in details in chapter \@ref(optim-caveat) of this book, and you can find an example of this pattern inside the [`{hexmake}`](https://github.com/ColinFay/hexmake/blob/master/R/R6.R) [@R-hexmake] application.
+
+If you eager to know more about what `{R6}` is and how it works, we advice the chapter on this subject in _Advanced R_ [@hadleywickham2019], [R6](https://adv-r.hadley.nz/r6.html).
 
 #### D. Other approaches: about `{tidymodules}`  {-}
 
@@ -822,7 +829,7 @@ On the other hand, the front-end might change: new colors, new graphic designs, 
 Whenever this happens, you will be happy you have separated the business logic from the application logic, as you will have to change less code.
 
 How to do that?
-Add you application logic inside a file (typically, a module), and the business logic in another R script (typically starting with `fct_` or `utils_`).
+Add your application logic inside a file (typically, a module), and the business logic in another R script (typically starting with `fct_` or `utils_`).
 You can even write the business logic inside another package, making these functions really reusable outside your application.
 
 ### Small is beautiful (bis repetita)
