--- a/06-ux-matters.Rmd
+++ b/06-ux-matters.Rmd
@@ -492,7 +492,7 @@ Web Accessibility deals with the process of making the web available to people w
 
 > The Web is fundamentally designed to work for all people, whatever their hardware, software, language, location, or ability. When the Web meets this goal, it is accessible to people with a diverse range of hearing, movement, sight, and cognitive ability. $`r right_link("Accessibility in Context - The Web Accessibility Initiative", "https://www.w3.org/WAI/fundamentals/accessibility-intro/")`$
 
-When learning to code a web app through "canonical" courses, you will be introduced to web Accessibility very early.
+When learning to code a web app through "canonical" courses, you will be introduced to web accessibility very early.
 For example, you can learn about this straight from the first chapter of [learn.freecodecamp.org](https://learn.freecodecamp.org/). 
 The first course, "Responsive Web Design Certification", has a chapter on web accessibility just after the one on HTML and CSS. 
 
