--- a/09-prototyping.Rmd
+++ b/09-prototyping.Rmd
@@ -43,7 +43,7 @@ Instead of losing time focusing on specific pieces of code you think need to be 
 In other words, "_Make It Work. Make It Right. Make It Fast_", ([KentBeck](https://wiki.c2.com/?MakeItWorkMakeItRightMakeItFast)).
 
 + It's easier to spot mistakes when you have something that can run. 
-If a piece of software runs, it is straightforward to check if a change in the codebase break the software or not: it either still run or not. 
+If a piece of software runs, it is straightforward to check if a change in the codebase break the software or not: it either still runs or not. 
 
 ### The "UI first" approach
 
