--- a/10-step-by-step-build.Rmd
+++ b/10-step-by-step-build.Rmd
@@ -32,7 +32,7 @@ If you are building your application using `{golem}`, you will have 3 default de
 If you call `golem::use_recommended_deps()` in the first workflow script, you will also have `r knitr::combine_words(paks)` as dependencies to your package 
 ^[The idea with this function is to provide a shortcut for adding commonly used dependencies, so that you don't have to do it by hand]
 .
-But what about other dependencies like `{ggplot2}` or `{DT}`?
+But what about other dependencies like `{ggplot2}`?
 These ones need to be added by hand. 
 
 Here is how to process for a new dependency: 
@@ -208,7 +208,7 @@ Another example is writing your `if/else` statement on one line `if (this) that 
 
 Note that you can also identify files with zero code coverage using the `covr::zero_coverage(covr::package_coverage())` function, which, instead of printing back a metric of coverage for each file, will point to all the lines that are not covered by tests inside your package, as show in figure \@ref(fig:10-step-by-step-build-12):
 
-```{r 10-step-by-step-build-12, echo=FALSE, fig.cap="`{golem` files with zero code coverage", out.width="100%"}
+```{r 10-step-by-step-build-12, echo=FALSE, fig.cap="`{golem}` files with zero code coverage", out.width="100%"}
 knitr::include_graphics("img/zerocov.png")
 ```
 
