--- a/11-step-by-step-secure.Rmd
+++ b/11-step-by-step-secure.Rmd
@@ -566,7 +566,7 @@ system(
   "docker run -p 2708:80 --rm --name xmk2 -d colinfay/hexmake", 
   wait = FALSE
 )
-Sys.sleep(10) # Let the container launch
+Sys.sleep(60) # Let the container launch
 ```
 
 
@@ -854,7 +854,7 @@ For example, to create a `Dockerfile` for a `{golem}` project, you can run, from
 golem::add_dockerfile()
 ```
 
-Let's take some time to understand file, or how we could be building it from scratch.
+Let's take some time to understand this file, or and details how we could be building it from scratch.
 
 1. `FROM`
 
