--- a/16-optimizing-shiny-code.Rmd
+++ b/16-optimizing-shiny-code.Rmd
@@ -19,6 +19,7 @@ In the rest of this chapter, we will be focusing on how to optimize `{shiny}` sp
 ### What is caching? 
 
 Caching is the process of storing resources intensive results so that when they are needed again, your program can reuse the result another time without having to redo the computation again.
+This is particularly useful for computation that will always return the same result, and should never be used if you expect the result could vary from one function call to the other.
 
 How does it work? 
 Let's make a brief parallel with the human brain, and imagine that you know that you will need to use a phone number many time in the day, and for the purpose of this thought experiment you are completely unable to remember it
@@ -299,7 +300,7 @@ And this can be retrieved with:
 fs::dir_info("cache")[, "access_time", drop  = FALSE]
 ```
 
-Hence, when using cache, it might be interesting to periodically removed the oldest used cache, so that you can regain some space on the server running the application. 
+Hence, when using cache, it might be interesting to periodically remove the oldest used cache, so that you can regain some space on the server running the application. 
 
 ## Asynchronous in `{shiny}` 
 
