--- a/17-javascript.Rmd
+++ b/17-javascript.Rmd
@@ -7,7 +7,7 @@ knitr::opts_chunk$set( comment = "", eval = FALSE)
 #### Prelude {-}
 
 Note that you can build successful, production-grade `{shiny}`[@R-shiny] application without ever writing a single line of JavaScript code. 
-Even more when you can use a lot of tools that already bundle JavaScript functionalities: a great example of that being `{shinyjs}`[@R-shinyjs], which allows to interact with your application using JavaScript, without writing a single line of JavaScript. 
+Even more when you can use a lot of tools that already bundle JavaScript functionalities: a great example of that being `{shinyjs}`[@R-shinyjs], which allows you to interact with your application using JavaScript, without writing a single line of JavaScript. 
 
 We chose to include this chapter in this book as it will help you get a better understanding on how `{shiny}` works at its core, and that getting at ease with JavaScript can help you get better at building web applications using R on the long run.
 It can also help extending `{shiny}` with other JavaScript libraries, for example using `{htmlwidgets}`[@R-htmlwidgets], when you get better at writing JavaScript.
