--- a/index.Rmd
+++ b/index.Rmd
@@ -22,18 +22,35 @@ cover-image: https://raw.githubusercontent.com/ThinkR-open/engineering-shiny-boo
 knitr::opts_chunk$set( 
   comment = "", 
   cache = TRUE,
-  fig.align = "center"
+  fig.align = "center", 
+  tidy = 'grkstyle::grk_style_transformer', 
+  tidy.opts=list(width.cutoff=10)
 )
 
 options(
   htmltools.dir.version = FALSE, 
   formatR.indent = 2, 
-  width = 55, 
   digits = 4, 
   conflicts.policy = FALSE,
-  dplyr.summarise.inform = FALSE,
-  width = 60
+  dplyr.summarise.inform = FALSE
 )
+
+library(knitr)
+hook_output = knit_hooks$get('output')  #this is the output for code
+
+knit_hooks$set(output = function(x, options) {
+  # use if the output is PDF and you set an option linewidth to e.g. 70
+  # in the chunk options
+  n <- 72
+  if (knitr::is_latex_output()) {
+    if (nchar(x) > 72){
+      x <- gsub("\n", "", x)
+      x <- gsub("(.{72})", "\\1\n", x)
+    }
+  }
+  hook_output(x, options)
+})
+
 ```
 
 # Introduction {-}
@@ -72,10 +89,10 @@ The content of this book oscillates between conceptual discussions (e.g. what is
 This book will then be of interest for two groups: 
 
 + Team manager who want to help organizing work, and `{shiny}` developers who want to learn about project management. 
-This group will find relevant content in the first 1/3 of this book (roughly until chapter \@ref(#workflow)).
+This group will find relevant content in the first 1/3 of this book (roughly until chapter \@ref(workflow)).
 
 + Developers who want to cover medium to advanced `{shiny}` topics that will be relevant to production.
-This group will be more interested in the rest of the book, that roughly spans from chapter \@ref(#matters) to the end.
+This group will be more interested in the rest of the book, that roughly spans from chapter \@ref(matters) to the end.
 Note that the technical elements covered in this book range from intermediate to advanced topics, and we hope that you will find relevant topics for your current goals, whatever your level is.
 
 In practice, we've come to realize that a lot of `{shiny}` projects are built by small team, with a large proportion of these "team" being composed of only one developer. 
@@ -105,7 +122,7 @@ From the engineering point of view, a production-grade software can be relied up
 A production software also has real life impact if something goes wrong: users will take wrong decisions, they might be unable to do their day to day work, and all the things that can happen when the software you use on a daily basis fails to run. 
 From the engineering point of view, a production-grade software has real impact when something goes wrong: someone has to fix the bug, the company selling the software might lose money, data can be lost... 
 
-Given these two properties, you can understand why being in production doesn't necessarily mean being serve to gazillions of users^[
+Given these two properties, you can understand why being in production doesn't necessarily mean being served to gazillions of users^[
 "Production" being equal to tons of users is a definition we regularly hear.
 ], and serving trillions of GB of data: even a software that is used by one person who relies on this application to do their job is a production software. 
 
@@ -224,16 +241,18 @@ means that the package will be installed from GitHub, and that you can use the `
 
 ## Acknowledgments {-}
 
+### Special thank {-}
+
+We want to thank ThinkR for freeing us time to write this book, and for always being supportive all along the project. 
+
+Colin wants to personally thank [Christophe Dervieux](https://twitter.com/chrisderv) for all his help, be it for this book or any other project, and for being such an awesome person. 
+He also want to thank [Eric Nantz](https://r-podcast.org/) for taking the time to write the forewords, for being one of the first `{golem}` adopter, and for always being enthusiastic about all thing gravitating around the `golemverse`.
+
 ### Contributors to this book {-}
 
-Thanks to them for their help on the book!
+We want to thank all the people that have contributed to this book, either via Pull Requests, Issue on the book Github Repository, or via direct conversation.
 
-+ [Liz Roten](https://github.com/eroten){target="_blank"}, for proofreading chapter 1 and helping us with writing advice. 
-+ [Dan S. Reznik](https://github.com/dan-reznik){target="_blank"}, for proof-reading the JavaScript chapter.
-+ [Harry Anderson](https://github.com/xari){target="_blank"}, for giving feedback on the JavaScript chapter.
-+ [Julian Stanley](https://github.com/julianstanley){target="_blank"}, for proof-reading chapter 3. 
-+ [Aron Strandberg](https://github.com/aronolof){target="_blank"} for proofreading several chapters.
-+ [jpmarindiaz](https://github.com/jpmarindiaz){target="_blank"} for proofreading several chapters.
+[&#x0040;allaway](https://github.com/allaway), [&#x0040;andreferraribr](https://github.com/andreferraribr), [&#x0040;aronolof](https://github.com/aronolof), [&#x0040;BenjaminLouis](https://github.com/BenjaminLouis), [&#x0040;bstrain71](https://github.com/bstrain71), [&#x0040;cedricbriandgithub](https://github.com/cedricbriandgithub), [&#x0040;dA505819](https://github.com/dA505819), [&#x0040;dan-reznik](https://github.com/dan-reznik), [&#x0040;davidpb90](https://github.com/davidpb90), [&#x0040;denrou](https://github.com/denrou), [&#x0040;DianeBeldame](https://github.com/DianeBeldame), [&#x0040;eroten](https://github.com/eroten), [&#x0040;espinielli](https://github.com/espinielli), [&#x0040;etiennebacher](https://github.com/etiennebacher), [&#x0040;fBedecarrats](https://github.com/fBedecarrats), [&#x0040;flrd](https://github.com/flrd), [&#x0040;frankschmitt](https://github.com/frankschmitt), [&#x0040;FrieseWoudloper](https://github.com/FrieseWoudloper), [&#x0040;giocomai](https://github.com/giocomai), [&#x0040;Guillaume-Lombardo](https://github.com/Guillaume-Lombardo), [&#x0040;gwd999](https://github.com/gwd999), [&#x0040;hadley](https://github.com/hadley), [&#x0040;hsm207](https://github.com/hsm207), [&#x0040;jamespooley](https://github.com/jamespooley), [&#x0040;jcrodriguez1989](https://github.com/jcrodriguez1989), [&#x0040;jonmcalder](https://github.com/jonmcalder), [&#x0040;jpmarindiaz](https://github.com/jpmarindiaz), [&#x0040;julianstanley](https://github.com/julianstanley), [&#x0040;kdaily](https://github.com/kdaily), [&#x0040;maelle](https://github.com/maelle), [&#x0040;naomistrandberg](https://github.com/naomistrandberg), [&#x0040;psychometrician](https://github.com/psychometrician), [&#x0040;rainiercito](https://github.com/rainiercito), [&#x0040;ronniemo](https://github.com/ronniemo), [&#x0040;rpodcast](https://github.com/rpodcast), [&#x0040;sowla](https://github.com/sowla), [&#x0040;tellyshia](https://github.com/tellyshia), [&#x0040;ukyouhanDVSA](https://github.com/ukyouhanDVSA), [&#x0040;xari](https://github.com/xari), and [&#x0040;xvrdm](https://github.com/xvrdm).
 
 ```{r index-4, include = FALSE}
 # Some internal funs
