--- a/latex/before_body.tex
+++ b/latex/before_body.tex
@@ -12,5 +12,13 @@ who still think we fix printers and broken WiFi.
 %\includegraphics{images/dedication.pdf}
 \end{center}
 
+
+\begin{center}
+To Diane,
+
+Thank you for always believing in us.
+%\includegraphics{images/dedication.pdf}
+\end{center}
+
 \setlength{\abovedisplayskip}{-5pt}
 \setlength{\abovedisplayshortskip}{-5pt}
