--- a/latex/preamble.tex
+++ b/latex/preamble.tex
@@ -1,9 +1,17 @@
 \usepackage{booktabs}
 \usepackage{longtable}
+
+\usepackage{listings}
+\lstset{
+  breaklines=true
+}
+
 \usepackage[bf,singlelinecheck=off]{caption}
 
 \usepackage{framed,color}
 \definecolor{shadecolor}{RGB}{248,248,248}
+\definecolor{bluethinkr}{HTML}{15b7d6}
+\definecolor{orangethinkr}{HTML}{DE633C}
 
 \renewcommand{\textfraction}{0.05}
 \renewcommand{\topfraction}{0.8}
