--- a/20-session-info.Rmd
+++ b/20-session-info.Rmd
@@ -12,7 +12,7 @@ With the following configuration:
 xfun::session_info()
 ```
 
-```{r, echo = FALSE}
+```{r 20-session-info-1-bis, echo = FALSE}
 a <- xfun::session_info() 
 a[[5]] <- gsub("/ C", "\n/ C", a[[5]])
 a
